# scifield

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
conf/: config.yaml  demo.yaml
conf/corpus/: default.yaml  v1.yaml
conf/epistemic/: default.yaml  v1.yaml
conf/forecasting/: default.yaml
conf/integration/: default.yaml
conf/novelty/: default.yaml
conf/thematic/: default.yaml  embed.yaml  topics.yaml  topics_retune_phase1.yaml  topics_retune_phase2.yaml
docs/: index.md
docs/api/: scifield.md
docs/figures/: G2_C1_rct_confusion.png.run.json  G2_C2_model_agreement.png.run.json  G2_C3_priors.png.run.json  topic_landscape.html
docs/gates/: G1_spotcheck.csv  G1_topic_interpretability.md  G2_epistemic_reliability.md
docs/operations/: api_costs.md  brev.md  dependencies.md
docs/phases/: 0_scaffolding.md  1_corpus.md  2_thematic.md  3_epistemic.md  4_novelty.md  5_forecasting.md  6_integration.md  7_validation.md  8_publication.md  9_manuscript.md  epistemic.md
docs/preregistrations/: PR1_epistemic_extraction.md
notebooks/: 01_corpus_overview.ipynb  02_coverage_report.ipynb  03_embedding_bakeoff.ipynb  04_topic_landscape.ipynb  05_handlabel_sampling.ipynb  06_epistemic_validation.ipynb
plan/: Session-Objectives-MAP.md  plan-v1.md
plans/: 2026-05-22-v1-s07-epistemic-prep.md  Session-Objectives-MAP.md  plan-S05.md  plan-S06b.md  plan-s3.md  scifield_plan.md
scripts/: _build_notebook_01.py  brev_embed.sh  brev_smoke.sh
src/scifield/: __init__.py  cli.py
src/scifield/corpus/: __init__.py  authors.py  enrich_orchestrator.py  enrich_store.py  openalex.py  pubmed.py  pubmed_demo.py  ror.py  semantic_scholar.py  store.py
src/scifield/epistemic/: __init__ 2.py  __init__.py  arbitrate.py  batch.py  deepseek_extract.py  extract.py  kappa.py  labeling.py  pilot.py  prompt.py  sampling.py  schema.py  validate.py
src/scifield/forecasting/: __init__.py
src/scifield/integration/: __init__.py
src/scifield/novelty/: __init__.py
src/scifield/repro/: __init__.py
src/scifield/thematic/: __init__.py  coherence.py  dedup.py  embed.py  faiss_index.py  topics.py
tests/: test_cli.py  test_cli_embed.py  test_cli_enrich.py  test_cli_epistemic.py  test_cli_harvest.py  test_cli_topics.py  test_corpus_authors.py  test_corpus_enrich_store.py  test_corpus_openalex.py  test_corpus_pubmed.py  test_corpus_ror.py  test_corpus_store.py  test_demo_config.py  test_epistemic_arbitrate.py  test_epistemic_batch.py  test_epistemic_deepseek.py  test_epistemic_extract.py  test_epistemic_kappa.py  test_epistemic_labeling.py  test_epistemic_pilot.py  test_epistemic_prompt.py  test_epistemic_sampling.py  test_epistemic_schema.py  test_epistemic_validate.py  test_repro.py  test_thematic_coherence.py  test_thematic_dedup.py  test_thematic_embed.py  test_thematic_embed_offline.py  test_thematic_faiss.py  test_thematic_topics.py
tests/fixtures/openalex/: sample_work.json
tests/fixtures/pubmed_xml/: efetch_arthroscopy_2024.xml  esearch_arthroscopy_2024.xml
tests/fixtures/ror/: sample_response.json
tests/fixtures/semantic_scholar/: sample_paper.json
