[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scifield"
version = "0.0.1"
description = "Multi-axis framework for monitoring scientific field health."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Samer Salman" }]
dependencies = [
    "typer>=0.12",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "biopython>=1.84",
    "pyarrow>=17",
    "httpx>=0.27",
    "tenacity>=9.0",
    "duckdb>=1.1",
    "aiofiles>=24.1",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "torch>=2.2",
    "numpy>=1.26",
    "einops>=0.8",
    "bertopic>=0.16",
    "umap-learn>=0.5",
    "hdbscan>=0.8.33",
    "gensim>=4.3",
    "plotly>=5.20",
    "scikit-learn>=1.3",
    "nbconvert>=7.16",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "krippendorff>=0.6.0",
]

[project.scripts]
scifield = "scifield.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scifield"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "jupyter>=1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests that take >5s (planted-cluster BERTopic, etc.); CI may opt out via -m 'not slow'.",
]
